--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,7 +15,8 @@
 
             </ul>
             <span class="navbar-text">
-        Navbar text with an inline element
+                <button class="btn btn-outline-success"
+                (click)="auth.loginWithRedirect()">Log in</button>
       </span>
         </div>
     </div>
